# oclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_CN.md  config.example.json  docker-compose.yml
.github/workflows/: ci.yml
crates/acp/: Cargo.toml
crates/acp/src/: lib.rs  permissions.rs  server.rs  session.rs  translator.rs  types.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  auth.rs  auth_cooldown.rs  auto_recall.rs  command.rs  command_poll.rs  compaction.rs  context_guard.rs  echo_detect.rs  error_classify.rs  history.rs  lib.rs  loop_detect.rs  model_fallback.rs  pruning.rs  reply_dispatch.rs  str_util.rs  stream_chunker.rs  subagent.rs  task_graph.rs  thinking.rs  thread_ownership.rs  tool_mutation.rs  transcript.rs  transcript_repair.rs  usage.rs
crates/auto-reply/: Cargo.toml
crates/auto-reply/src/: agent_runner.rs  block_pipeline.rs  block_streaming.rs  context.rs  debounce.rs  dispatch.rs  envelope.rs  get_reply.rs  lib.rs  link_detect.rs  link_runner.rs  link_understanding.rs  normalize.rs  queue.rs  reply_dispatcher.rs  tokens.rs  types.rs
crates/browser-core/: Cargo.toml
crates/browser-core/src/: browser.rs  cdp.rs  connection.rs  error.rs  lib.rs  page.rs  state.rs
crates/channel-core/: Cargo.toml
crates/channel-core/src/: bluebubbles.rs  discord.rs  draft_stream.rs  feishu.rs  google_chat.rs  group_gate.rs  health.rs  irc.rs  lib.rs  line.rs  manager.rs  matrix.rs  mattermost.rs  msteams.rs  nextcloud.rs  nostr.rs  policy.rs  router.rs  signal.rs  slack.rs  streaming.rs  synology.rs  telegram.rs  traits.rs  twitch.rs  types.rs  webchat.rs  whatsapp.rs  zalo.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/wizard/: channel_wizard.rs  config_wizard.rs  doctor_wizard.rs  mod.rs  provider_setup.rs  skill_wizard.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  config_override.rs  error.rs  lib.rs  migration.rs  settings.rs  watcher.rs
crates/cron-core/: Cargo.toml
crates/cron-core/src/: backoff.rs  delivery.rs  events.rs  lib.rs  reaper.rs  run_log.rs  runner.rs  schedule.rs  scheduler.rs  service.rs  stagger.rs  store.rs  telemetry.rs  types.rs
crates/daemon-core/: Cargo.toml
crates/daemon-core/src/: lib.rs  monitor.rs  process.rs  service.rs  signal.rs
crates/doctor-core/: Cargo.toml
crates/doctor-core/src/: checker.rs  health.rs  lib.rs  report.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: binding.rs  channel_access.rs  client.rs  control_ui.rs  error.rs  heartbeat_runner.rs  http.rs  lib.rs  memory_bridge.rs  message.rs  msg_context.rs  pipeline.rs  server.rs  session.rs  session_key.rs  tailscale.rs  tls.rs  webchat.rs  webhook.rs
crates/gateway-core/src/http/: agent_bridge.rs  auth.rs  cron_executor.rs  metrics.rs  middleware.rs  rate_limit.rs  routes.rs  webhooks.rs
crates/gateway-core/tests/: e2e.rs
crates/llm-core/: Cargo.toml
crates/llm-core/src/: catalog.rs  chat.rs  embedding.rs  error.rs  health.rs  lib.rs  tokenizer.rs
crates/llm-core/src/providers/: anthropic.rs  bedrock.rs  cloudflare.rs  cohere.rs  copilot.rs  google.rs  huggingface.rs  litellm.rs  media_markdown.rs  minimax.rs  mock.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  qwen.rs  together.rs  vllm.rs  volcengine.rs  voyage.rs  xai.rs
crates/media-core/: Cargo.toml
crates/media-core/src/: audio_processor.rs  image_processor.rs  lib.rs  media_store.rs  mime_detector.rs
crates/media-understanding/: Cargo.toml
crates/media-understanding/src/: cache.rs  lib.rs  pipeline.rs  types.rs
crates/media-understanding/src/providers/: anthropic.rs  deepgram.rs  google.rs  mod.rs  openai.rs
crates/memory-core/: Cargo.toml
crates/memory-core/examples/: check_db.rs
crates/memory-core/src/: auto_capture.rs  embedding_cache.rs  embeddings.rs  lib.rs  manager.rs  mmr.rs  query_expand.rs  search.rs  store.rs  types.rs  watcher.rs
crates/pairing/: Cargo.toml
crates/pairing/src/: allowlist.rs  lib.rs  setup_code.rs  store.rs
crates/plugin-core/: Cargo.toml
crates/plugin-core/src/: discovery.rs  hook_strategy.rs  lib.rs  loader.rs  manifest.rs  plugin.rs  plugin_api.rs  registrations.rs  registry.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: frames.rs  lib.rs  primitives.rs  snapshot.rs
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/src/: container.rs  docker.rs  execution.rs  image.rs  lib.rs  network.rs  volume.rs
crates/security-core/: Cargo.toml
crates/security-core/src/: audit.rs  auth_profiles.rs  device_pairing.rs  lib.rs  oauth.rs  pairing.rs  session.rs
crates/skills-core/: Cargo.toml
crates/skills-core/src/: builtin.rs  discovery.rs  gates.rs  installer.rs  lib.rs  manifest.rs  registry.rs  skill.rs  workspace.rs
crates/storage-core/: Cargo.toml
crates/storage-core/src/: database.rs  embedding.rs  error.rs  lib.rs  memory.rs  mmr.rs  models.rs  query_expansion.rs  search.rs  temporal_decay.rs
crates/tools-core/: Cargo.toml
crates/tools-core/src/: approval.rs  context.rs  error.rs  groups.rs  lib.rs  policy.rs  profiles.rs  scheduler.rs  tool.rs  truncation.rs
crates/tts-core/: Cargo.toml
crates/tts-core/src/: directive.rs  lib.rs  prepare.rs  types.rs
crates/tts-core/src/providers/: edge.rs  elevenlabs.rs  mod.rs  openai.rs
crates/tui-core/: Cargo.toml
crates/tui-core/src/: app.rs  chat.rs  commands.rs  editor.rs  gateway.rs  input.rs  lib.rs  overlay.rs  render.rs  screens.rs  state.rs  theme.rs  widgets.rs
crates/voice-core/: Cargo.toml
crates/voice-core/src/: connection.rs  heartbeat_wake.rs  lib.rs  stream.rs  stt.rs  tts.rs  voicewake.rs
crates/workspace-core/: Cargo.toml
crates/workspace-core/src/: bootstrap.rs  evolution.rs  files.rs  heartbeat.rs  identity.rs  lib.rs  memory_flush.rs  soul.rs  system_prompt.rs
scripts/: release.bat  release.sh
