[workspace]
members = [
    "crates/protocol",
    "crates/config",
    "crates/gateway-core",
    "crates/channel-core",
    "crates/browser-core",
    "crates/llm-core",
    "crates/tools-core",
    "crates/storage-core",
    "crates/cli",
    "crates/agent-core",
    "crates/plugin-core",
    "crates/sandbox-core",
    "crates/skills-core",
    "crates/voice-core",
    "crates/doctor-core",
    "crates/security-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["oriz.cc"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
bytes = "1.9"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
once_cell = "1.20"
parking_lot = "0.12"
url = "2.5"
regex = "1.11"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
rand = "0.9"
rustls = "0.23"
webpki-roots = "0.26"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-tungstenite = "0.26"
futures-channel = "0.3"
futures = "0.3"
axum = { version = "0.8", features = ["ws"] }
tower-layer = "0.1"
tower-service = "0.3"
rusqlite = { version = "0.33", features = ["bundled"] }
pem = "3.0"
tokio-rustls = "0.26"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Workspace member crates
oclaws-protocol = { path = "crates/protocol" }
oclaws-config = { path = "crates/config" }
oclaws-gateway-core = { path = "crates/gateway-core" }
oclaws-channel-core = { path = "crates/channel-core" }
oclaws-browser-core = { path = "crates/browser-core" }
oclaws-llm-core = { path = "crates/llm-core" }
oclaws-tools-core = { path = "crates/tools-core" }
storage-core = { path = "crates/storage-core" }
oclaws-agent-core = { path = "crates/agent-core" }
oclaws-plugin-core = { path = "crates/plugin-core" }
oclaws-sandbox-core = { path = "crates/sandbox-core" }
oclaws-skills-core = { path = "crates/skills-core" }
oclaws-voice-core = { path = "crates/voice-core" }
oclaws-doctor-core = { path = "crates/doctor-core" }
oclaws-security-core = { path = "crates/security-core" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
