[workspace]
members = [
    "crates/protocol",
    "crates/config",
    "crates/gateway-core",
    "crates/channel-core",
    "crates/browser-core",
    "crates/llm-core",
    "crates/tools-core",
    "crates/cli",
    "crates/agent-core",
    "crates/plugin-core",
    "crates/skills-core",
    "crates/doctor-core",
    "crates/security-core",
    "crates/tui-core",
    "crates/daemon-core",
    "crates/cron-core",
    "crates/memory-core",
    "crates/auto-reply",
    "crates/media-understanding",
    "crates/tts-core",
    "crates/pairing",
    "crates/acp",
    "crates/workspace-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["oriz.cc"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
bytes = "1.9"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
once_cell = "1.20"
parking_lot = "0.12"
url = "2.5"
regex = "1.11"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
serde_yaml = "0.9"
rand = "0.9"
rustls = "0.23"
webpki-roots = "0.26"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tower = "0.5"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-channel = "0.3"
futures = "0.3"
axum = { version = "0.8", features = ["ws"] }
tower-layer = "0.1"
tower-service = "0.3"
rusqlite = { version = "0.33", features = ["bundled"] }
pem = "3.0"
tokio-rustls = "0.26"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "timeout"] }
ratatui = "0.29"
tokio-postgres = "0.7"
lancedb = "0.2"
image = "0.25"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
async-stream = "0.3"
ed25519-dalek = { version = "2.1", features = ["std"] }
cron = "0.15"
tiktoken-rs = "0.6"
dotenvy = "0.15"
prost = "0.13"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# Workspace member crates
oclaw-protocol = { path = "crates/protocol" }
oclaw-config = { path = "crates/config" }
oclaw-gateway-core = { path = "crates/gateway-core" }
oclaw-channel-core = { path = "crates/channel-core" }
oclaw-browser-core = { path = "crates/browser-core" }
oclaw-llm-core = { path = "crates/llm-core" }
oclaw-tools-core = { path = "crates/tools-core" }
oclaw-agent-core = { path = "crates/agent-core" }
oclaw-plugin-core = { path = "crates/plugin-core" }
oclaw-skills-core = { path = "crates/skills-core" }
oclaw-doctor-core = { path = "crates/doctor-core" }
oclaw-security-core = { path = "crates/security-core" }
oclaw-tui-core = { path = "crates/tui-core" }
oclaw-daemon-core = { path = "crates/daemon-core" }
oclaw-cron-core = { path = "crates/cron-core" }
oclaw-memory-core = { path = "crates/memory-core" }
oclaw-auto-reply = { path = "crates/auto-reply" }
oclaw-media-understanding = { path = "crates/media-understanding" }
oclaw-workspace-core = { path = "crates/workspace-core" }
oclaw-acp = { path = "crates/acp" }
oclaw-tts-core = { path = "crates/tts-core" }
oclaw-pairing = { path = "crates/pairing" }

[profile.release]
lto = "thin"
opt-level = 3
strip = true
