[package]
name = "oclaw-agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oclaw-llm-core.workspace = true
oclaw-protocol.workspace = true
oclaw-tools-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-util.workspace = true
dirs.workspace = true
rand.workspace = true
