[package]
name = "oclaw-auto-reply"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
regex.workspace = true
sha2.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", features = ["json"] }
url = "2"
