[package]
name = "oclaw-browser-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oclaw-protocol.workspace = true
oclaw-config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true
url.workspace = true
reqwest.workspace = true
uuid.workspace = true
tokio-tungstenite.workspace = true
base64.workspace = true
