[package]
name = "oclaws-channel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oclaws-protocol.workspace = true
oclaws-config.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true
url.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
