[package]
name = "oclaws"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "oclaws"
path = "src/main.rs"

[dependencies]
oclaws-protocol.workspace = true
oclaws-config.workspace = true
oclaws-gateway-core.workspace = true
oclaws-channel-core.workspace = true
oclaws-llm-core.workspace = true
oclaws-agent-core.workspace = true
oclaws-memory-core.workspace = true
oclaws-tools-core.workspace = true
oclaws-doctor-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
anyhow.workspace = true
dirs.workspace = true
serde_json.workspace = true
uuid.workspace = true
futures.workspace = true
reqwest.workspace = true
oclaws-tui-core = { path = "../tui-core" }
oclaws-daemon-core = { path = "../daemon-core" }
oclaws-skills-core = { path = "../skills-core" }
oclaws-plugin-core = { path = "../plugin-core" }
oclaws-cron-core = { path = "../cron-core" }
oclaws-workspace-core = { path = "../workspace-core" }
async-trait.workspace = true
dotenvy.workspace = true
tokio-tungstenite.workspace = true
prost.workspace = true
chrono.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
