[package]
name = "oclaw"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "oclaw"
path = "src/main.rs"

[dependencies]
oclaw-protocol.workspace = true
oclaw-config.workspace = true
oclaw-gateway-core.workspace = true
oclaw-channel-core.workspace = true
oclaw-llm-core.workspace = true
oclaw-agent-core.workspace = true
oclaw-memory-core.workspace = true
oclaw-tools-core.workspace = true
oclaw-doctor-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
anyhow.workspace = true
dirs.workspace = true
serde_json.workspace = true
uuid.workspace = true
futures.workspace = true
reqwest.workspace = true
oclaw-tui-core = { path = "../tui-core" }
oclaw-daemon-core = { path = "../daemon-core" }
oclaw-skills-core = { path = "../skills-core" }
oclaw-plugin-core = { path = "../plugin-core" }
oclaw-cron-core = { path = "../cron-core" }
oclaw-workspace-core = { path = "../workspace-core" }
async-trait.workspace = true
dotenvy.workspace = true
tokio-tungstenite.workspace = true
prost.workspace = true
chrono.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
