[package]
name = "oclaw-cron-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
cron.workspace = true
async-trait.workspace = true
sha2.workspace = true
reqwest.workspace = true
