[package]
name = "oclaw-daemon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
sysinfo = "0.33"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
