[package]
name = "oclaw-gateway-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oclaw-protocol.workspace = true
oclaw-config.workspace = true
oclaw-llm-core.workspace = true
oclaw-plugin-core.workspace = true
oclaw-agent-core.workspace = true
oclaw-tools-core.workspace = true
oclaw-channel-core.workspace = true
oclaw-memory-core.workspace = true
oclaw-doctor-core.workspace = true
oclaw-cron-core.workspace = true
oclaw-workspace-core.workspace = true
oclaw-skills-core.workspace = true
oclaw-auto-reply.workspace = true
oclaw-media-understanding.workspace = true
oclaw-acp.workspace = true
oclaw-tts-core.workspace = true
oclaw-pairing.workspace = true
oclaw-browser-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
regex.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true
rand.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
native-tls.workspace = true
reqwest.workspace = true
tower.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
tokio-tungstenite.workspace = true
futures-channel.workspace = true
axum.workspace = true
tower-layer.workspace = true
tower-service.workspace = true
pem.workspace = true
tokio-rustls.workspace = true
tower-http.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
async-stream.workspace = true
rusqlite.workspace = true
dirs.workspace = true
image.workspace = true
once_cell.workspace = true
