[package]
name = "oclaws-media-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
base64.workspace = true
mime = "0.3"
chrono.workspace = true
image = { version = "0.25", optional = true }
hound = { version = "3.5", optional = true }

[features]
default = []
image = ["dep:image"]
audio = ["dep:hound"]
