[package]
name = "oclaws-memory-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
async-trait.workspace = true
