[package]
name = "oclaw-security-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
reqwest.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
urlencoding = "2.1"
