[package]
name = "oclaws-skills-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
url.workspace = true
once_cell.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
futures-util.workspace = true
futures.workspace = true
serde_yaml = { workspace = true }
dirs.workspace = true
