[package]
name = "oclaw-tools-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
base64.workspace = true
urlencoding.workspace = true
url.workspace = true
cron.workspace = true
oclaw-browser-core = { path = "../browser-core" }
oclaw-memory-core = { path = "../memory-core" }
