[package]
name = "oclaws-tts-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json"] }
regex.workspace = true
