[package]
name = "oclaws-tui-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.1"
strum = { version = "0.26", features = ["derive"] }
num-complex = "0.4"

[features]
default = []
crossterm = ["ratatui/crossterm"]
termion = ["ratatui/termion"]
