[package]
name = "oclaw-tui-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reedline = "0.38"
termimad = "0.30"
crossterm = "0.28"
unicode-width = "0.2"
futures = "0.3"
url = "2"
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
dirs = "6.0"

[features]
default = []
