[package]
name = "oclaw-workspace-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
